feat: kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,35 @@
-background  #000000
-foregrpund #7f005f
-bold_font auto
-font_family Ubuntu Mono Nerd Font
-font_size 18
+# Catppuccin-Mocha
+include current-theme.conf
+
+# Bar Styles
+tab_bar_min_tabs            1
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' 💻{}'.format(num_windows) if num_windows > 1 else ''}
+
+# Fonts
+font_family                 CascadiaCode
+bold_font                   CascadiaCode Bold
+bold_italic_font            CascadiaCode BoldItalic
+font_size                   15
+italic_font                 CascadiaCode Italic
+
+# Padding (Vertical/Horizontal)
+window_padding_width        4 15
+
+# Bell Sound
+enable_audio_bell           no
+
+#Kitty mod
+kitty_mod                   ctrl+shift
+
+# Window Commands
+map kitty_mod+enter         new_window
+map kitty_mod+j             next_window
+map kitty_mod+k             previous_window
+map kitty_mod+w             close_window
+
+# Resize Window
+map kitty_mod+r             start_resizing_window
+
